# haveibeenpwned-downloader

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  release.yml
src/: client.rs  main.rs  output.rs  ranges.rs  service.rs
