[package]
name = "haveibeenpwned-downloader"
version = "0.2.0"
edition = "2021"
authors = ["Alisa Gorelova <nanopro1g@gmail.com>"]
readme = "README.md"
description = "cli tool to download leaked password hashes from haveibeenpwned api."
repository = "https://github.com/alisa101rs/haveibeenpwned-downloader"
keywords = ["security", "password", "nist"]
categories = ["command-line-utilities"]
license = "MIT"


[dependencies]
futures-util = "0.3.30"
futures = "0.3.30"
reqwest = { version = "0.12", features = ["http2", "rustls-tls-webpki-roots", "macos-system-configuration"], default-features = false}
tower = { version = "0.4.13", features = ["retry", "util"] }
tokio = { version = "1.41.1", features = ["sync", "rt-multi-thread", "fs", "macros", "io-std"] }
clap = { version = "4.5.8", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
stable-eyre = "0.2.2"
bytes = "1.6.0"
pin-project-lite = "0.2.14"
http-body-util = "0.1.2"
indicatif = "0.17.8"
hex = "0.4.3"
